--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <h1>Fiscal de Deputados</h1>
     </header>
     <body>
-        
+        <p>Hello World</p>
     </body>
     <footer>
     </footer>
+    <script src="index.js"></script>
 </html>
